--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my computeational thinking </title>
+    <title>my computeational-thinking </title>
   </head>
   <body>
-    <h1>Hello World from  computational thinking </h1>
+    <h1>Hello World from  computational-thinking </h1>
  <!-- ipaddresses paste next line -->
    <h4 id="id01">AAAA</h4>
    <h5 id="id02">AAAA</h5>
